--- a/test/structures/trees/tree.ut.html
+++ b/test/structures/trees/tree.ut.html
@@ -1,10 +1,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script src="../../../utils/structures/node.proto.js"></script>
-  <script src="../../../utils/structures/tree.proto.js"></script>
-  <script src="../../../utils/structures/tree.factory.js"></script>
-  <script src="../../../utils/structures/tree.iterator.js"></script>
+  <script src="../../../utils/structures/tree/node.proto.js"></script>
+  <script src="../../../utils/structures/tree/tree.proto.js"></script>
+  <script src="../../../utils/structures/tree/tree.factory.js"></script>
+  <script src="../../../utils/structures/tree/tree.iterator.js"></script>
   <script src="../../../utils/exceptions/IllegalArgumentException.proto.js"></script>
   <script src="../../../utils/exceptions/IllegalStateException.proto.js"></script>
   <script src="./tree.ut.js"></script>
