Refactored Tree and Stack to include refactored Generics support

--- a/test/structures/trees/tree.ut.html
+++ b/test/structures/trees/tree.ut.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <script src="../../../utils/structures/generics.proto.js"></script>
   <script src="../../../utils/structures/tree/node.proto.js"></script>
   <script src="../../../utils/structures/tree/tree.proto.js"></script>
   <script src="../../../utils/structures/tree/tree.factory.js"></script>
