--- a/test/structures/map/shim/weakmap/shim/weakmap.ut.html
+++ b/test/structures/map/shim/weakmap/shim/weakmap.ut.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script src="../../../global.ut.js"></script>
+  <script src="../../../../../global.ut.js"></script>
   <script src="./weakmap.global.ut.js"></script>
-  <script src="../../../../utils/structures/map/shim/weakmap.proto.js"></script>
+  <script src="../../../../../../utils/structures/map/shim/weakmap.proto.js"></script>
   <script src="./weakmap.ut.js"></script>
 </head>
 <body>
